--- a/POMmodel/pom.xml
+++ b/POMmodel/pom.xml
@@ -3,6 +3,29 @@
   <groupId>com.XSERP</groupId>
   <artifactId>POMmodel</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+<build>
+<plugins>
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M5</version>
+<configuration>
+<suiteXmlFiles>
+<suiteXmlFile>TestNG.xml</suiteXmlFile>
+</suiteXmlFiles>
+</configuration>
+</plugin>
+ <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+</plugins>
+</build>
 <dependencies>
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
@@ -10,6 +33,22 @@
     <artifactId>selenium-java</artifactId>
     <version>4.1.2</version>
 </dependency>
-
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>6.1.1</version>
+        <scope>compile</scope>
+    </dependency>
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.1.0</version>
+</dependency>
 </dependencies>
+<properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+</properties>
 </project>
